Boards can be saved in storage and loaded used the menu buttons